--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# generated content (AI-generated images/videos)
+/public/generated/
+
+# credentials and secrets
+*.pem
+*.key
+service-account*.json
+credentials*.json
