--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,9 @@
 [build]
 builder = "NIXPACKS"
 
+[build.nixpacksPlan.phases.setup]
+nixPkgs = ["nodejs_20", "npm"]
+
 [deploy]
 startCommand = "npm run start"
 healthcheckPath = "/"
