fix: Remove npm from nixPkgs - it's bundled with nodejs_20

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [build.nixpacksPlan.phases.setup]
-nixPkgs = ["nodejs_20", "npm"]
+nixPkgs = ["nodejs_20"]
 
 [deploy]
 startCommand = "npm run start"
